--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+      const firebaseConfig = {
+  apiKey: "AIzaSyAVJdR3LAbJzYFsCTj9bOpzmwvxrvZ0mJs",
+  authDomain: "fichas-tempos-sombrios.firebaseapp.com",
+  projectId: "fichas-tempos-sombrios",
+  storageBucket: "fichas-tempos-sombrios.appspot.com",
+  messagingSenderId: "568736051189",
+  appId: "1:568736051189:web:2bb2ab43a144f08618fabc"
+};  
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
